--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.underbell.bootApp</groupId>
-	<artifactId>bootApp</artifactId>
+	<groupId>com.underbell.springBootTestApp</groupId>
+	<artifactId>springBootTestApp</artifactId>
 	<version>1.0</version>
 	<packaging>jar</packaging>
 
